# devcontainer-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/commands/: issue.md
.github/workflows/: release.yml  test.yml
src/devcontainer_tools/: __init__.py  cli.py  config.py  container.py  utils.py
tests/: __init__.py  test_cli.py  test_compose_fallback.py  test_config.py  test_container.py  test_container_edge_cases.py  test_container_error_handling.py  test_container_integration.py  test_path_sanitization.py  test_utils.py
